# search_engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: converterjson.h  help.h  readsettings.h  search.h  search_engine.h  test.h
res/: answers.json  readme.md  requests.json
search_engine/: CMakeLists.txt  main.cpp
search_engine/files/: file001.txt  file002.txt  file004.txt
search_engine/include/: converterjson.h  search.h  search_engine.h
search_engine/res/: config.json  requests.json  settings.json
search_engine/resources/: answers.json  config.json  file001.txt  file002.txt  file003.txt  file004.txt  requests.json
search_engine/src/: converterjson.cpp  search.cpp  search_engine.cpp
src/: CMakeLists.txt  converterjson.cpp  help.cpp  main.cpp  readsettings.cpp  search.cpp  search_engine.cpp  test.cpp
test/: CMakeLists.txt  test.cpp
